better prompt in interaction

--- a/TODO
+++ b/TODO
@@ -12,3 +12,5 @@ and want to verify things worked correctly
 * write some recipes for browsercms
 
 * work on ubuntu install ideas
+
+* add a nicer looking prompt for when you ask a question of the user
