add note about new method to see if a gem's been installed

--- a/TODO
+++ b/TODO
@@ -13,3 +13,4 @@ and want to verify things worked correctly
 
 * work on ubuntu install ideas
 
+* create a "if gem_exists?('browsercms')" type method
