--- a/TODO
+++ b/TODO
@@ -14,3 +14,5 @@ and want to verify things worked correctly
 * work on ubuntu install ideas
 
 * create a "if gem_exists?('browsercms')" type method
+
+* print out a warning message if a recipe isn't found
