--- a/TODO
+++ b/TODO
@@ -17,3 +17,8 @@ and want to verify things worked correctly
   * in fact, maybe make a .beetrc file where you can set a prefix permanently. 
 
 * use aruba to test beet - http://github.com/aslakhellesoy/aruba
+
+* write recipes for
+  * paperclip
+  * multiple file uploads
+  * facebook connect with devise - http://stackoverflow.com/questions/3580557/rails-3-using-devise-how-to-allow-someone-to-log-in-using-their-facebook-account
